tests/camlp4/write_prop.expected

Characters 45-48:
  fun (obj : int) -> obj##p <- 2;;
                     ^^^
Error: This expression has type int but an expression was expected of type
         < .. > Js.t
Characters 25-28:
  fun (obj : < > Js.t) -> obj##p <- 2;;
                          ^^^
Error: This expression has type <  >
       It has no method p
Characters 52-58:
  fun (obj : < p : float Js.readonly_prop > Js.t) -> obj##p <- 1;;
                                                     ^^^^^^
Error: This expression has type
         float Js.readonly_prop = < get : float > Js.gen_prop
       but an expression was expected of type
         < set : 'jsoo_arg -> unit; .. > Js.gen_prop
       The first object type has no method set
Characters 53-54:
  fun (obj : < p : float Js.prop > Js.t) -> obj##p <- 1;;
                                                      ^
Error: This expression has type int but an expression was expected of type
         float
Characters 42-53:
  fun (obj : < p : int Js.prop > Js.t) -> (obj##p <- 1) + 1;;
                                           ^^^^^^^^^^^
Error: This expression has type unit but an expression was expected of type
         int

